# dojo-alpha

./: .env_devnet  .gitmodules  Cargo.toml  README.md  docker-compose.yml  protostar.toml
.github/workflows/: test.yml
client/: main.ts  package-lock.json  package.json
client/src/: main.ts
contracts/: IComponent.cairo  README.md  component.cairo  interfaces.cairo  system.cairo  world.cairo
contracts/components/location/: Location.cairo
contracts/libraries/: erc165.cairo  ownable.cairo  registerable.cairo  registry.cairo  writable.cairo
contracts/systems/: Move.cairo
contracts/world/: IWorld.cairo  World.cairo  registerable.cairo
examples/snake/: protostar.toml
examples/snake/src/components/: Consumable.cairo  Position.cairo
examples/snake/src/systems/: Chomp.cairo  Move.cairo
examples/snake/tests/: test_snake.cairo
proxy/: Cargo.toml  readme.md
proxy/proto/: helloworld.proto
proxy/src/: client.rs  server.rs
proxy/tests/: client.rs
scripts/: deploy.sh
tests/: test_world.cairo
