[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
serde_json = "1.0.74"
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
starknet = { git = "https://github.com/ponderingdemocritus/starknet-rs" }
url = "2.2.2"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
serde_json = "1.0.74"
